--- a/less/prompts/character-generation.less
+++ b/less/prompts/character-generation.less
@@ -77,6 +77,7 @@ form.ed4e.character-generation {
 
     .discipline-selection__link {
       text-align: center;
+      padding-top: 10px;
     }
 
     .discipline-questor-switch-group {
@@ -119,7 +120,6 @@ form.ed4e.character-generation {
     .optional-talents-pool .assign-value-entries {
       display: grid;
       grid-template-columns: repeat(2, minmax(0, 1fr));
-      gap: 0.25rem;
     }
 
     .entry-listing-header {
@@ -139,7 +139,7 @@ form.ed4e.character-generation {
         align-items: center;
         justify-content: space-between;
         width: 100%;
-        padding: 0.15rem 0;
+        padding: 0.1rem 0;
       }
 
       .rank-change {
@@ -158,6 +158,11 @@ form.ed4e.character-generation {
       .assign-value-entries {
         display: grid;
         grid-template-columns: repeat(2, minmax(0, 1fr));
+        column-gap: 0.5rem;
+      }
+
+      input[type="radio"]::before {
+        font-size: var(--font-size-14);
       }
 
       .assign-value-entry {
@@ -167,6 +172,7 @@ form.ed4e.character-generation {
       .entry-name {
         flex: 1 1 auto;
         min-width: 0;
+        padding: 0.05rem 0;
       }
 
       .entry-name label {
@@ -184,13 +190,13 @@ form.ed4e.character-generation {
       .entry-name .content-link,
       .entry-name a {
         display: inline-block;
-        margin-top: -6px;
       }
 
       .rank-change {
         margin-left: auto;
         align-items: center;
         white-space: nowrap;
+        padding-top: 2px;;
       }
 
       .rank-change-value {
